@@ -305,18 +305,18 @@
 			    <artifactId>jacoco-maven-plugin</artifactId>
 			    <version>0.8.7</version>
 			    <executions>
-				<execution>
-				    <goals>
-					<goal>prepare-agent</goal>
-				    </goals>
-				</execution>
-				<execution>
-				    <id>report</id>
-				    <phase>prepare-package</phase>
-				    <goals>
-					<goal>report</goal>
-				    </goals>
-				</execution>
+					<execution>
+						<goals>
+							<goal>prepare-agent</goal>
+						</goals>
+					</execution>
+					<execution>
+						<id>report</id>
+							<phase>prepare-package</phase>
+							<goals>
+								<goal>report</goal>
+							</goals>
+					</execution>
 			    </executions>
 			</plugin>
 			<plugin>
@@ -324,9 +324,6 @@
 				<artifactId>maven-surefire-plugin</artifactId>
 				<version>2.22.0</version>
 				<configuration>
-				    <argLine>
-					--illegal-access=permit
-				    </argLine>
 				    <skipTests>false</skipTests>
 				    <testFailureIgnore>true</testFailureIgnore>
 				    <forkMode>once</forkMode>
